internal/gatewayapi/testdata/envoyproxy-tls-settings-invalid.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      name: gateway-tls
      namespace: envoy-gateway
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - protocol: TLS
          port: 445
          tls:
            mode: Terminate
            certificateRefs:
              - kind: Secret
                namespace: envoy-gateway
                group: ""
                name: default-cert
        - protocol: HTTPS
          port: 443
          tls:
            mode: Terminate
            certificateRefs:
              - kind: Secret
                namespace: envoy-gateway
                group: ""
                name: default-cert
tcpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: TCPRoute
    metadata:
      namespace: envoy-gateway
      name: envoy-gateway
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-tls
      rules:
        - backendRefs:
            - name: https-backend
              namespace: default
              port: 443
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      name: httproute-tls
      namespace: envoy-gateway
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-tls
      rules:
        - backendRefs:
            - name: https-backend
              namespace: default
              port: 443
referenceGrants:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: ReferenceGrant
    metadata:
      name: refg-route-svc
      namespace: default
    spec:
      from:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          namespace: envoy-gateway
        - group: gateway.networking.k8s.io
          kind: TCPRoute
          namespace: envoy-gateway
        - group: gateway.networking.k8s.io
          kind: Gateway
          namespace: envoy-gateway
        - group: gateway.networking.k8s.io
          kind: BackendTLSPolicy
          namespace: default
      to:
        - group: ""
          kind: Service
services:
  - apiVersion: v1
    kind: Service
    metadata:
      name: https-backend
      namespace: default
    spec:
      clusterIP: 10.11.12.13
      ports:
        - port: 443
          name: https
          protocol: TCP
          targetPort: 443

endpointSlices:
  - apiVersion: discovery.k8s.io/v1
    kind: EndpointSlice
    metadata:
      name: endpointslice-https-backend
      namespace: default
      labels:
        kubernetes.io/service-name: https-backend
    addressType: IPv4
    ports:
      - name: https
        protocol: TCP
        port: 443
    endpoints:
      - addresses:
          - "10.244.0.11"
        conditions:
          ready: true
backendTLSPolicies:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: BackendTLSPolicy
    metadata:
      name: policy-tls
      namespace: default
    spec:
      targetRefs:
        - group: ""
          kind: Service
          name: https-backend
      validation:
        wellKnownCACertificates: System
        hostname: example.com
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    backendTLS:
      clientCertificateRef:
        group: ""
        kind: Secret
        namespace: envoy-gateway-system
        name: client-auth-not-found
      ciphers:
        - ECDHE-RSA-AES128-GCM-SHA256
        - ECDHE-ECDSA-AES256-GCM-SHA384
      ecdhCurves:
        - ECDHE-RSA-AES128-GCM-SHA256
        - ECDHE-ECDSA-AES256-GCM-SHA384
      maxVersion: tls1.3
      minVersion: tls1.2
      SignatureAlgorithms:
        - RSA-PSS-RSAE-SHA256
        - ECDSA-SECP256R1-SHA256
      alpnProtocols:
        - HTTP/1.1
        - HTTP/2
secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      name: client-auth
      namespace: envoy-gateway-system
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLRENDQWhDZ0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF4TUlWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUURFd2hVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBT1kySnVYMDJHMGplSjdBOURGbGQrclRtNGE3THJKWjYxTWJLUlVQMzVuVnl4LzAKdEFZKzJoVURUZVBpeG9ZWVU2VzVMS1NBR3Z0MnlubWtpd0RBWm9KZVBYYTNxbW14c2d5RnZrZU5tZ2oyS0lLRQpSYW9YY1R6emNzT [...]
      tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRRG1OaWJsOU5odEkzaWUKd1BReFpYZnEwNXVHdXk2eVdldFRHeWtWRDkrWjFjc2Y5TFFHUHRvVkEwM2o0c2FHR0ZPbHVTeWtnQnI3ZHNwNQpwSXNBd0dhQ1hqMTJ0NnBwc2JJTWhiNUhqWm9JOWlpQ2hFV3FGM0U4ODNMRHA3UkVkdHJISjdCeVNLbFVrN1JSCnhRV3pYL0lJaGJ2TTJIVzJWdDBQS0RuZ05CZ0p6Q0R3c1kxOVMyN1RwcG0vcldtRHhnM1JGYStKYkJ2TUx0elcKNXVVZVFQVUVxaFBnNDd4dUQ0Ny9nWER6c0lIbTZhU2d6d2dMcTA4VWY5UUI5OWk1bzB2SDVSSXdidnpxSWxpTQpLQlJmcHRlUlRUZ [...]
  - apiVersion: v1
    kind: Secret
    metadata:
      name: default-cert
      namespace: envoy-gateway
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLRENDQWhDZ0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF4TUlWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUURFd2hVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBT1kySnVYMDJHMGplSjdBOURGbGQrclRtNGE3THJKWjYxTWJLUlVQMzVuVnl4LzAKdEFZKzJoVURUZVBpeG9ZWVU2VzVMS1NBR3Z0MnlubWtpd0RBWm9KZVBYYTNxbW14c2d5RnZrZU5tZ2oyS0lLRQpSYW9YY1R6emNzT [...]
      tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRRG1OaWJsOU5odEkzaWUKd1BReFpYZnEwNXVHdXk2eVdldFRHeWtWRDkrWjFjc2Y5TFFHUHRvVkEwM2o0c2FHR0ZPbHVTeWtnQnI3ZHNwNQpwSXNBd0dhQ1hqMTJ0NnBwc2JJTWhiNUhqWm9JOWlpQ2hFV3FGM0U4ODNMRHA3UkVkdHJISjdCeVNLbFVrN1JSCnhRV3pYL0lJaGJ2TTJIVzJWdDBQS0RuZ05CZ0p6Q0R3c1kxOVMyN1RwcG0vcldtRHhnM1JGYStKYkJ2TUx0elcKNXVVZVFQVUVxaFBnNDd4dUQ0Ny9nWER6c0lIbTZhU2d6d2dMcTA4VWY5UUI5OWk1bzB2SDVSSXdidnpxSWxpTQpLQlJmcHRlUlRUZ [...]
