internal/gatewayapi/testdata/envoyproxy-tls-settings-invalid.out.yaml
backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    creationTimestamp: null
    name: policy-tls
    namespace: default
  spec:
    targetRefs:
    - group: ""
      kind: Service
      name: https-backend
    validation:
      hostname: example.com
      wellKnownCACertificates: System
  status:
    ancestors:
    - ancestorRef:
        name: gateway-tls
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: 'Failed to locate TLS secret for client auth: envoy-gateway-system/client-auth-not-found
          specified in EnvoyProxy envoy-gateway-system/test.'
        reason: Invalid
        status: "False"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-tls
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: ""
      port: 445
      protocol: TLS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: default-cert
          namespace: envoy-gateway
        mode: Terminate
    - name: ""
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: default-cert
          namespace: envoy-gateway
        mode: Terminate
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: ""
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: ""
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: httproute-tls
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-tls
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: https-backend
        namespace: default
        port: 443
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-tls
        namespace: envoy-gateway
infraIR:
  envoy-gateway/gateway-tls:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          creationTimestamp: null
          name: test
          namespace: envoy-gateway-system
        spec:
          backendTLS:
            alpnProtocols:
            - HTTP/1.1
            - HTTP/2
            ciphers:
            - ECDHE-RSA-AES128-GCM-SHA256
            - ECDHE-ECDSA-AES256-GCM-SHA384
            clientCertificateRef:
              group: ""
              kind: Secret
              name: client-auth-not-found
              namespace: envoy-gateway-system
            ecdhCurves:
            - ECDHE-RSA-AES128-GCM-SHA256
            - ECDHE-ECDSA-AES256-GCM-SHA384
            maxVersion: tls1.3
            minVersion: tls1.2
            signatureAlgorithms:
            - RSA-PSS-RSAE-SHA256
            - ECDSA-SECP256R1-SHA256
          logging: {}
        status: {}
      listeners:
      - address: null
        name: envoy-gateway/gateway-tls/
        ports:
        - containerPort: 10445
          name: tls-445
          protocol: TLS
          servicePort: 445
      - address: null
        name: envoy-gateway/gateway-tls/
        ports:
        - containerPort: 10443
          name: https-443
          protocol: HTTPS
          servicePort: 443
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-tls
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-tls
tcpRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TCPRoute
  metadata:
    creationTimestamp: null
    name: envoy-gateway
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-tls
      namespace: envoy-gateway
    rules:
    - backendRefs:
      - name: https-backend
        namespace: default
        port: 443
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: 'failed to locate TLS secret for client auth: envoy-gateway-system/client-auth-not-found
          specified in EnvoyProxy envoy-gateway-system/test'
        reason: Failed to process the settings associated with the TCP route.
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-tls
        namespace: envoy-gateway
xdsIR:
  envoy-gateway/gateway-tls:
    accessLog:
      json:
      - path: /dev/stdout
    http:
    - address: '::'
      hostnames:
      - '*'
      isHTTP2: false
      metadata:
        kind: Gateway
        name: gateway-tls
        namespace: envoy-gateway
      name: envoy-gateway/gateway-tls/
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10443
      routes:
      - directResponse:
          statusCode: 500
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-tls
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-tls/rule/0/match/-1/*
      tls:
        alpnProtocols: null
        certificates:
        - name: envoy-gateway/default-cert
          privateKey: '[redacted]'
          serverCertificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF3d0lWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUUREQWhVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBSzFKempQSWlXZzNxb0hTckFkZGtlSmphTVA5aXlNVGkvQlBvOWNKUG9SRThaaTcKV2FwVXJYTC85QTlyK2pITXlHSVpOWk5kY1o1Y1kyWHYwTFA4WnhWeTJsazArM3d0WXpIbnBHWUdWdHlxMnRldAp [...]
    tcp:
    - address: '::'
      name: envoy-gateway/gateway-tls/
      port: 10445
      tls:
        alpnProtocols: []
        certificates:
        - name: envoy-gateway/default-cert
          privateKey: '[redacted]'
          serverCertificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lVU3JTYktMZjBiTEVHb2dXeC9nQ3cyR0N0dnhFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0V6RVJNQThHQTFVRUF3d0lWR1Z6ZENCSmJtTXdIaGNOTWpRd01qSTVNRGt6TURFd1doY05NelF3TWpJMgpNRGt6TURFd1dqQVRNUkV3RHdZRFZRUUREQWhVWlhOMElFbHVZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBSzFKempQSWlXZzNxb0hTckFkZGtlSmphTVA5aXlNVGkvQlBvOWNKUG9SRThaaTcKV2FwVXJYTC85QTlyK2pITXlHSVpOWk5kY1o1Y1kyWHYwTFA4WnhWeTJsazArM3d0WXpIbnBHWUdWdHlxMnRldAp [...]
